# todo.txt

./: Cargo.toml
projects/: Cargo.toml
projects/src/: lib.rs  projects.rs
todotxt/: Cargo.toml
todotxt-cli/: Cargo.toml
todotxt-cli/src/: editor.rs  editor2.rs  main.rs
todotxt/src/: collection.rs  lib.rs  parser.rs
trigger/: Cargo.toml
trigger/examples/: trigger.rs
trigger/src/: abort_controller.rs  backend.rs  engine.rs  error.rs  fs_notify.rs  lib.rs  manuel.rs
triggerman/: Cargo.toml
triggerman/src/: bindings.rs  config.rs  main.rs  manager.rs
triggerman/tasks/example/: config.json  script.js
