[package]
name = "trigger"
version = "0.1.0"
edition = "2024"

[features]
default = ["notify"]
notify = ["dep:notify-debouncer-full"]

[dependencies]
futures = { version = "0.3" }
tokio = { version = "1", features = ["sync", "rt"] }

async-stream = { version = "0.3" }

notify-debouncer-full = { version = "0.5.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
